Remove usages of `StringUtils` (#74)